--- a/game/bower.json
+++ b/game/bower.json
@@ -2,6 +2,7 @@
   "name": "ld31",
   "dependencies": {
     "underscore": "*",
-    "victor": "~0.2.6"
+    "howler": "~1.1.25",
+    "webaudiox": "*"
   }
 }
